--- a/pom.xml
+++ b/pom.xml
@@ -54,11 +54,15 @@
 			<scope>test</scope>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/org.webjars/materializecss -->
 		<dependency>
 			<groupId>org.webjars</groupId>
 			<artifactId>materializecss</artifactId>
 			<version>0.100.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>jquery</artifactId>
+			<version>3.1.1</version>
 		</dependency>
 
 		<!--<dependency>-->
