--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 spring.servlet.multipart.max-file-size=128MB
 spring.servlet.multipart.max-request-size=128MB
 spring.http.multipart.enabled=false
+
+# Uncomment this when You switch to MySql
+#spring.jpa.hibernate.ddl-auto=create
+#spring.datasource.url=jdbc:mysql://localhost:3306/db_example
+#spring.datasource.username=springuser
+#spring.datasource.password=ThePassword
